k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudcart-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudcart-db
  template:
    metadata:
      labels:
        app: cloudcart-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "150m"
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: cloudcart-db-service
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: cloudcart-db
