k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudcart-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Frontend route
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudcart-frontend
            port:
              number: 80
      # Product Service API route
      - path: /api/products(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cloudcart-product-service
            port:
              number: 8081
      # Order Service API route
      - path: /api/orders(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cloudcart-order-service
            port:
              number: 8082
